# zp-hcp-demos-codesandbox

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
.codesandbox/: tasks.json
.cursor/hooks/state/: continual-learning.json
app/: main.py
app/lib/: constants.py  credentials.py  hashing.py  store.py  token.py
app/routes/: callbacks.py  exchange.py  init.py  ping.py  pong.py  stream.py
static/: dfp.js  fingerprint.js  hcp.js  index.html  launch.js  obs.js  results.html  stream.js  turnstile.js  zp-dfp.js  zp-fp.js  zp-obs.js
tests/: test_hash_parity.py
